--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-google-signin/google-signin": "^13.0.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -19,6 +20,8 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
     "iconsax-react-native": "^0.0.8",
     "query-string": "^9.1.0",
