--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-google-signin/google-signin": "^13.0.1",
     "@react-native/metro-config": "^0.75.4",
@@ -35,7 +36,6 @@
     "react-native-svg": "^15.6.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
