update auth reducer

--- a/app.json
+++ b/app.json
@@ -18,13 +18,26 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.tndgoat.PetCare"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-font"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "8fd3582f-4460-45d3-9714-6bd559cba22d"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/8fd3582f-4460-45d3-9714-6bd559cba22d"
+    },
+    "owner": "tndgoat"
   }
 }
