--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-google-signin/google-signin": "^13.0.1",
     "@react-native/metro-config": "^0.75.4",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -24,16 +24,19 @@
     "expo-app-loading": "^2.1.1",
     "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.27",
     "iconsax-react-native": "^0.0.8",
+    "metro": "^0.81.0",
+    "metro-core": "^0.81.0",
     "query-string": "^9.1.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-fbsdk-next": "^13.0.0",
-    "react-native-gesture-handler": "^2.19.0",
-    "react-native-reanimated": "^3.15.1",
-    "react-native-safe-area-context": "^4.10.9",
-    "react-native-screens": "^3.34.0",
-    "react-native-svg": "^15.6.0",
+    "react-native-gesture-handler": "2.16.1",
+    "react-native-reanimated": "3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-swiper": "^1.6.0",
     "react-redux": "^9.1.2",
@@ -42,6 +45,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.72.8",
     "prettier": "^3.3.3",
     "typescript": "^5.1.3"
   },
